src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsF-omT-dwP0.25-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-column-width { proportion 0.25; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 0, bounds: 1280 × 720, states: [Activated]
