src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsF-omT-dwU-dhF500-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-column-width {  }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1272 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 492, bounds: 1272 × 712, states: [Activated]
